Added global function for accessing the default service

--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
     "autoload": {
         "psr-4": {
             "Gigadrive\\MinecraftAvatar\\": "src/"
-        }
+        },
+        "files": [
+            "src/global_functions.php"
+        ]
     },
     "authors": [
         {
